apps/grafana/Service.yaml
apiVersion: v1
kind: Service
metadata:
  name: grafana-svc
  namespace: default
spec:
  ports:
  - port: 3000
    protocol: TCP
    targetPort: http-grafana
  selector:
    app: grafana
  sessionAffinity: None
  type: ClusterIP
